kubernetes/infrastructure/config/main/traefik/traefik/api.service.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/master-standalone-strict/service.json
apiVersion: v1
kind: Service
metadata:
  name: traefik-api
spec:
  selector:
    app.kubernetes.io/name: traefik
  ports:
    - port: 8080
      name: traefik
