kubernetes/infrastructure/config/main/traefik/traefik/default.gateway.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/refs/heads/main/gateway.networking.k8s.io/gateway_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: default
spec:
  gatewayClassName: traefik
  listeners:
    - allowedRoutes:
        namespaces:
          from: All
      hostname: ${PUBLIC_DOMAIN}
      name: http
      port: 8000
      protocol: HTTP
    - allowedRoutes:
        namespaces:
          from: All
      hostname: ${LOCAL_DOMAIN}
      name: http-local
      port: 8000
      protocol: HTTP
    - allowedRoutes:
        namespaces:
          from: All
      hostname: ${PUBLIC_DOMAIN}
      name: https
      port: 8443
      protocol: HTTPS
      tls:
        certificateRefs:
          - name: public-certificate-prod
        options:
          cert-manager.io/cluster-issuer: cert-manager-public-prod
        mode: Terminate
    - allowedRoutes:
        namespaces:
          from: All
      hostname: ${LOCAL_DOMAIN}
      name: https-local
      port: 8443
      protocol: HTTPS
      tls:
        certificateRefs:
          - name: cert-manager-local-tls
        options:
          cert-manager.io/issuer: cert-manager-local
        mode: Terminate
    - allowedRoutes:
        namespaces:
          from: All
      hostname: "*.${PUBLIC_DOMAIN}"
      name: http-wildcard
      port: 8000
      protocol: HTTP
    - allowedRoutes:
        namespaces:
          from: All
      hostname: "*.${LOCAL_DOMAIN}"
      name: http-wildcard-local
      port: 8000
      protocol: HTTP
    - allowedRoutes:
        namespaces:
          from: All
      hostname: "*.${PUBLIC_DOMAIN}"
      name: https-wildcard
      port: 8443
      protocol: HTTPS
      tls:
        certificateRefs:
          - name: public-certificate-prod
        options:
          cert-manager.io/cluster-issuer: cert-manager-public-prod
        mode: Terminate
    - allowedRoutes:
        namespaces:
          from: All
      hostname: "*.${LOCAL_DOMAIN}"
      name: https-wildcard-local
      port: 8443
      protocol: HTTPS
      tls:
        certificateRefs:
          - name: cert-manager-local-tls
        options:
          cert-manager.io/issuer: cert-manager-local
        mode: Terminate
    - allowedRoutes:
        namespaces:
          from: All
      hostname: "*.${PUBLIC_DOMAIN}"
      name: 8080-https-wildcard
      port: 8080
      protocol: HTTPS
      tls:
        certificateRefs:
          - name: public-certificate-prod
        options:
          cert-manager.io/cluster-issuer: cert-manager-public-prod
        mode: Terminate
    # - allowedRoutes:
    #     kinds:
    #       - kind: TCPRoute
    #     namespaces:
    #       from: All
    #   name: samba
    #   port: 445
    #   protocol: TCP
    # - allowedRoutes:
    #     kinds:
    #       - kind: TLSRoute
    #     namespaces:
    #       from: All
    #   hostname: "*.${PUBLIC_DOMAIN}"
    #   name: 5432-tls-wildcard
    #   port: 5432
    #   protocol: TLS
    #   tls:
    #     certificateRefs:
    #       - name: public-certificate-prod
    #     options:
    #       cert-manager.io/cluster-issuer: cert-manager-public-prod
    #     mode: Passthrough
    # - allowedRoutes:
    #     kinds:
    #       - kind: TLSRoute
    #     namespaces:
    #       from: All
    #   hostname: "*.${LOCAL_DOMAIN}"
    #   name: 5432-tls-wildcard-local
    #   port: 5432
    #   protocol: TLS
    #   tls:
    #     certificateRefs:
    #       - name: cert-manager-local-tls
    #     options:
    #       cert-manager.io/issuer: cert-manager-local
    #     mode: Passthrough
