kubernetes/infrastructure/config/main/traefik/traefik/https.httproute.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/refs/heads/main/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: traefik-https
spec:
  parentRefs:
    - &gateway
      name: default
      sectionName: https-wildcard
      namespace: traefik
    - <<: *gateway
      sectionName: https-wildcard-local
  hostnames:
    - traefik.${LOCAL_DOMAIN}
    - traefik.${PUBLIC_DOMAIN}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: auth
      backendRefs:
        - name: traefik
          port: 8080
